2010-09-03  Kevin B. Kenny  <kennykb@acm.org>

	* generic/mysqlStubInit.c:
			Made changes to attempt to open the
			MySQL client library by SONAME as well as
			pathname, in an effort to fit in better
			with systems where libmysqlclient-devel
			is not installed.

	* library/tdbcmysql.tcl:
	* tests/tdbcmysql.test:
			Changed 'keySequence' to 'ordinalPosition' in
			'foreignkeys' for consistency with 'primarykeys'.

	* configure.in:
	* Makefile.in:
	* pkgIndex.tcl.in (new file):
	* README:
	* tclconfig/:	Upgraded the build to use TEA 3.9. Changed the
			approach to pkgIndex.tcl generation. (It's now built
			at configure time, rather than from the Makefile.)
			Advanced version number to 1.0b16.

	* configure: 	autoconf 2.59

2010-06-19  Kevin B. Kenny  <kennykb@acm.org>

	* Makefile.in:			Revised the code at the suggestion
	* generic/tdbcmysql.c:		of Andreas Kupries to avoid using
	* tests/all.tcl:		'tcl_findLibrary' and instead execute
	* tests/tdbcmysql.test:		both 'source' and 'load' commands from
					'pkgIndex.tcl'. Revised the 'make test'
					rule, and the test scripts, to
					test successfully under the new regime.
					Thanks to Andreas for providing the
					original patch, and to Joe English
					for providing ideas for simplifying
					and repairing 'make test' under the
					new regime.

2010-05-23  Kevin B. Kenny  <kennykb@acm.org>

	* library/tdbcmysql.tcl: Added a 'BuildForeignKeysStatement' method
	                         to tdbcmysql::connection that overrides the
				 one in the base class and accommodates the
				 nonstandard INFORMATION_SCHEMA provided in
				 MySQL.
	* tests/tdbcmysql.test: Added test cases for '$db primarykeys'
	                        and '$db foreignkeys'

2010-05-12  Kevin B. Kenny  <kennykb@acm.org>

	* generic/fakesql.h:
			Added dual definitions of data structures that change
			between MySQL 5.0 and 5.1.
	* generic/mysqlStubDefs.h:
			Added code to link to mysqlclient_r and mysqlclient